--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -2,33 +2,21 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/ic_house"
-        android:icon="@drawable/ic_house"
-        android:title="">
+        android:id="@+id/ic_explore"
+        android:icon="@drawable/ic_explore"
+        android:title="Explore">
     </item>
 
     <item
-        android:id="@+id/ic_search"
-        android:icon="@drawable/ic_search"
-        android:title="">
+        android:id="@+id/ic_chat"
+        android:icon="@drawable/ic_chat"
+        android:title="Chat">
     </item>
 
     <item
-        android:id="@+id/ic_circle"
-        android:icon="@drawable/ic_circle"
-        android:title="">
-    </item>
-
-    <item
-        android:id="@+id/ic_alert"
-        android:icon="@drawable/ic_alert"
-        android:title="">
-    </item>
-
-    <item
-        android:id="@+id/ic_android"
-        android:icon="@drawable/ic_android"
-        android:title="">
+        android:id="@+id/ic_profile"
+        android:icon="@drawable/ic_profile"
+        android:title="Profile">
     </item>
 
 </menu>
