--- a/app/src/main/res/layout/activity_explore.xml
+++ b/app/src/main/res/layout/activity_explore.xml
@@ -6,7 +6,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.team06.freehand.ExploreActivity">
+    tools:context="com.team06.freehand.Explore.ExploreActivity">
 
 
     <RelativeLayout
