Modified bottom navigation (colours, height, icon size). Added bottom margin to the center part of the ChatActivity

--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -16,7 +16,8 @@
         <!-- Top title and list of chats -->
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="54dp">
 
             <include layout="@layout/layout_centre_chat"/>
 
