--- a/app/src/main/res/layout/snippet_chatlist_rowview.xml
+++ b/app/src/main/res/layout/snippet_chatlist_rowview.xml
@@ -3,23 +3,24 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="horizontal"
     android:paddingTop="10dp"
     android:paddingBottom="10dp">
 
-    <ImageView
-        android:id="@+id/person_picture"
+    <de.hdodenhof.circleimageview.CircleImageView
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:layout_marginLeft="5dp"
-        android:layout_marginRight="5dp"
-        android:src="@drawable/ic_silhouette" />
+        android:id="@+id/person_picture"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        app:civ_border_color="@color/light_grey"
+        app:civ_border_width="1dp"
+        android:src="@drawable/ic_silhouette"/>
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginLeft="5dp"
-        android:layout_marginStart="5dp">
+        android:layout_height="match_parent">
 
         <TextView
             android:id="@+id/person_name"
