--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -3,7 +3,7 @@
 
     <item
         android:id="@+id/ic_explore"
-        android:icon="@drawable/ic_explore"
+        android:icon="@drawable/ic_compass"
         android:title="Explore">
     </item>
 
