Added login and register (this includes sending a verification email to new users)

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,6 +14,9 @@
     <color name="forest_green">#2c4033</color>
     <color name="eden_green">#145f58</color>
 
+    <color name="link_blue">#005ce6</color>
+
+
 
 
 
