--- a/app/src/main/res/layout/snippet_userinformation.xml
+++ b/app/src/main/res/layout/snippet_userinformation.xml
@@ -9,7 +9,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:layout_below="@+id/photo"
+        android:layout_below="@+id/relLayout2"
         android:paddingLeft="30dp"
         android:paddingRight="30dp"
         android:id="@+id/bio">
@@ -21,7 +21,7 @@
             android:id="@+id/name"
             android:textColor="@color/black"
             android:textStyle="bold"
-            android:text="Isabelle"
+            android:text=""
             android:textSize="18sp"
             android:gravity="center_horizontal"/>
 
@@ -37,9 +37,19 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:id="@+id/text_age"
+                android:textColor="@color/light_grey"
+                android:text="Age "
+                android:textSize="14sp"
+                android:visibility="gone"/>
+
+            <!--age number-->
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:id="@+id/age"
                 android:textColor="@color/light_grey"
-                android:text="Age 23"
+                android:text=""
                 android:textSize="14sp"/>
 
             <!--vertical line-->
@@ -53,7 +63,8 @@
                 android:layout_marginEnd="6dp"
                 android:layout_marginRight="6dp"
                 android:layout_marginTop="2dp"
-                android:layout_marginBottom="2dp"/>
+                android:layout_marginBottom="2dp"
+                android:visibility="gone"/>
 
 
             <!--location-->
@@ -62,7 +73,7 @@
                 android:layout_height="wrap_content"
                 android:id="@+id/location"
                 android:textColor="@color/light_grey"
-                android:text="Ottawa, ON"
+                android:text=""
                 android:textSize="14sp"/>
 
         </LinearLayout>
@@ -73,7 +84,7 @@
             android:layout_height="wrap_content"
             android:id="@+id/description"
             android:textColor="@color/black"
-            android:text="I am an artist. I have a passion for drawing and painting. I grew up learning from the best and expressing my creativity. I love art!"
+            android:text=""
             android:textSize="16sp"
             android:layout_marginTop="5dp"
             android:gravity="center_horizontal"/>
