--- a/app/src/main/res/layout/layout_center_profile.xml
+++ b/app/src/main/res/layout/layout_center_profile.xml
@@ -32,8 +32,7 @@
                     app:civ_border_color="@color/grey"
                     app:civ_border_width="2dp"
                     android:layout_margin="10dp"
-                    android:layout_centerHorizontal="true"
-                    android:src="@drawable/ic_silhouette"/>
+                    android:layout_centerHorizontal="true" />
 
                 <ImageView
                     android:layout_width="40dp"
