--- a/app/src/main/res/layout/layout_center_profile.xml
+++ b/app/src/main/res/layout/layout_center_profile.xml
@@ -19,12 +19,13 @@
             android:paddingTop="10dp"
             android:paddingBottom="10dp">
 
-            <!-- profile picture -->
+
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/relLayout2">
 
+                <!-- profile picture -->
                 <de.hdodenhof.circleimageview.CircleImageView
                     android:layout_width="100dp"
                     android:layout_height="100dp"
@@ -34,6 +35,18 @@
                     android:layout_margin="10dp"
                     android:layout_centerHorizontal="true" />
 
+                <!--add pictures button button-->
+                <ImageView
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:src="@drawable/ic_add"
+                    android:layout_alignParentLeft="true"
+                    android:layout_alignParentStart="true"
+                    android:layout_margin="10dp"
+                    android:id="@+id/btn_add"
+                    />
+
+                <!--settings button-->
                 <ImageView
                     android:layout_width="40dp"
                     android:layout_height="40dp"
