--- a/app/src/main/res/layout/snippet_center_editprofile.xml
+++ b/app/src/main/res/layout/snippet_center_editprofile.xml
@@ -17,7 +17,7 @@
                 android:layout_height="120dp"
                 android:id="@+id/profile_photo"
                 android:layout_marginTop="20dp"
-                app:civ_border_color="@color/black"
+                app:civ_border_color="@color/grey"
                 app:civ_border_width="2dp"
                 android:layout_centerHorizontal="true"
                 />
