--- a/app/src/main/res/layout/activity_explore.xml
+++ b/app/src/main/res/layout/activity_explore.xml
@@ -29,9 +29,9 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/relLayout2"
+            android:id="@+id/relLayout_gridview"
             android:layout_below="@+id/relLayout1"
-            android:layout_marginBottom="54dp">
+            android:layout_marginBottom="55dp">
 
             <GridView
                 android:layout_width="match_parent"
