--- a/app/src/main/res/layout/layout_explore_userinfo.xml
+++ b/app/src/main/res/layout/layout_explore_userinfo.xml
@@ -16,6 +16,7 @@
             android:paddingBottom="10dp"
             android:layout_below="@+id/layout1"
             android:layout_marginTop="-40dp"
+            android:id="@+id/relLayout_userinfo"
             >
 
             <include layout="@layout/snippet_userinformation" />
