--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -10,7 +10,7 @@
         android:layout_height="match_parent"
         android:id="@+id/relLayout_Chat">
 
-        <!-- <Button
+        <Button
             android:id="@+id/btn_newchat"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -18,7 +18,7 @@
             android:layout_centerHorizontal="true"
             android:layout_marginTop="275dp"
             android:text="New Chat"
-            android:layout_centerInParent="true" /> -->
+            android:layout_centerInParent="true" />
 
         <RelativeLayout
             android:layout_width="match_parent"
