--- a/app/src/main/res/layout/snippet_chatlist_rowview.xml
+++ b/app/src/main/res/layout/snippet_chatlist_rowview.xml
@@ -12,8 +12,8 @@
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:id="@+id/person_picture"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
+        android:layout_marginLeft="15dp"
+        android:layout_marginRight="15dp"
         app:civ_border_color="@color/light_grey"
         app:civ_border_width="1dp"
         android:src="@drawable/ic_silhouette"/>
@@ -22,13 +22,34 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <TextView
-            android:id="@+id/person_name"
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="15sp"
-            android:layout_centerVertical="true"
-            android:text="Lorem Ipsum"/>
+            android:orientation="vertical"
+            android:layout_centerVertical="true">
+
+            <TextView
+                android:id="@+id/person_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="15sp"
+                android:layout_centerVertical="true"
+                android:textStyle="bold"
+                android:textColor="@color/black"
+                android:text="Lorem Ipsum"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/person_name"
+                android:id="@+id/timestamp"
+                android:textColor="@color/grey"
+                android:textSize="12sp"
+                android:text="00-00-00"/>
+
+
+
+        </LinearLayout>
 
     </RelativeLayout>
 
