--- a/app/src/main/res/layout/activity_private_chat.xml
+++ b/app/src/main/res/layout/activity_private_chat.xml
@@ -22,39 +22,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/relLayout1"
         android:id="@+id/relLayout2"
-        android:padding="16dp">
-
-        <android.support.design.widget.FloatingActionButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:clickable="true"
-            android:src="@drawable/ic_send"
-            android:id="@+id/send_btn"
-            android:tint="@color/white"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentEnd="true"
-            app:fabSize="mini"
-            />
-
-        <android.support.design.widget.TextInputLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_toLeftOf="@+id/send_btn"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentLeft="true"
-            >
-
-            <EditText
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="Messsage..."
-                android:id="@+id/input_message"
-                />
-
-
-        </android.support.design.widget.TextInputLayout>
+        android:background="@color/white">
 
         <ListView
             android:layout_width="match_parent"
@@ -63,13 +31,47 @@
             android:layout_alignParentTop="true"
             android:layout_alignParentStart="true"
             android:layout_alignParentLeft="true"
-            android:layout_above="@+id/send_btn"
             android:dividerHeight="16dp"
             android:divider="@android:color/transparent"
-            android:layout_marginBottom="16dp"
+            android:layout_marginBottom="50dp"
             >
 
         </ListView>
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:id="@+id/btn_drawingSpace"
+            android:background="@color/eden_green"
+            android:layout_alignParentBottom="true">
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:gravity="center_vertical"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:layout_width="45dp"
+                    android:layout_height="45dp"
+                    android:src="@drawable/ic_pencil_white"
+                    android:layout_marginRight="15dp"
+                    android:layout_marginEnd="6dp"/>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Drawing Space"
+                    android:textSize="25sp"
+                    android:textColor="@color/white"
+                    />
+
+            </LinearLayout>
+
+
+
+        </RelativeLayout>
 
     </RelativeLayout>
 
