--- a/app/src/main/res/layout/snippet_chatlist_rowview.xml
+++ b/app/src/main/res/layout/snippet_chatlist_rowview.xml
@@ -15,8 +15,7 @@
         android:layout_marginLeft="15dp"
         android:layout_marginRight="15dp"
         app:civ_border_color="@color/light_grey"
-        app:civ_border_width="1dp"
-        android:src="@drawable/ic_silhouette"/>
+        app:civ_border_width="1dp"/>
 
     <RelativeLayout
         android:layout_width="match_parent"
