Switch Brush settings dialog from a DialogFragment to a Dialog (change default dialog size so that it takes up the screen width). Can use the dialog to change the brush size effectively.

--- a/app/src/main/res/drawable/button_rounded_rectangle_white.xml
+++ b/app/src/main/res/drawable/button_rounded_rectangle_white.xml
@@ -6,6 +6,9 @@
         <shape>
             <solid
                 android:color="@color/grey" />
+            <stroke
+                android:color="@color/eden_green"
+                android:width="2dp"/>
             <corners
                 android:radius="5dp"/>
         </shape>
