--- a/app/src/main/res/layout/dialog_brush_settings.xml
+++ b/app/src/main/res/layout/dialog_brush_settings.xml
@@ -38,9 +38,8 @@
             app:bsb_track_color="@color/eden_green"
             app:bsb_second_track_color="@color/eden_green"
             app:bsb_section_count="1"
-            app:bsb_section_text_position="bottom_sides"
             app:bsb_show_progress_in_float="false"
-            app:bsb_show_section_mark="true"
+            app:bsb_show_section_mark="false"
             app:bsb_show_section_text="false"
             app:bsb_show_thumb_text="false"
             app:bsb_thumb_radius="15dp"
