--- a/app/src/main/res/layout/snippet_messagelist_rowview_left.xml
+++ b/app/src/main/res/layout/snippet_messagelist_rowview_left.xml
@@ -8,31 +8,27 @@
     android:paddingEnd="100dp"
     >
 
-    <!--<de.hdodenhof.circleimageview.CircleImageView-->
-        <!--android:layout_width="50dp"-->
-        <!--android:layout_height="50dp"-->
-        <!--android:id="@+id/person_picture"-->
-        <!--app:civ_border_color="@color/light_grey"-->
-        <!--app:civ_border_width="1dp"-->
-        <!--android:src="@drawable/ic_question_mark"-->
-        <!--android:layout_marginRight="15dp"-->
-        <!--android:layout_marginEnd="15dp"-->
-        <!--/>-->
-
-    <ImageView
-        android:layout_width="match_parent"
+    <RelativeLayout
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/message_image"
-        android:src="@drawable/ic_question_mark"
-        android:layout_toRightOf="@+id/person_picture"
-        android:layout_toEndOf="@+id/person_picture"
         android:background="@drawable/border_grey"
-        />
+        android:padding="2dp"
+        android:id="@+id/relLayout1"
+        >
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/drawing"
+            android:src="@drawable/ic_question_mark"
+            android:adjustViewBounds="true"
+            />
+    </RelativeLayout>
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/timestamp"
-        android:layout_below="@id/message_image"
+        android:layout_below="@id/relLayout1"
         android:textColor="@color/grey"
         android:textSize="16sp"
         android:text="00-00-00"
